--- a/src/main/webapp/main.xhtml
+++ b/src/main/webapp/main.xhtml
@@ -8,23 +8,30 @@
       lang="en">
 <f:view>
     <h:head>
+        <!--h:outputStylesheet library="css" name="main.css"/-->
+
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link rel="stylesheet" href="main.css"/>
         <title>web3</title>
     </h:head>
     <h:body>
+        <!--h:graphicImage id="background" value="img/mainFon.png"/-->
+        <div id="background">
+
+        </div>
         <div id="mainWrapper">
             <h:panelGroup layout="block" id="svgWrapper">
+                <!--svg width="450" height="450" onclick="drawPoint(event.target.x, event.target.y, true)"-->
                 <svg width="450" height="450">
-                    <polygon points="375,225 225,225 225,375"
+                    <polygon id="triangle" points="150,225 225,225 225,300"
                              fill="rgb(252, 252, 252)" fill-opacity="0.5" stroke="rgba(59, 43, 20, 0.7)"/> <!-- треугольник на графике-->
 
 
-                    <polygon points="225,225 75,225 75,75, 225,75"
+                    <polygon id="rectangle" points="225,225 375,225 375,300, 225,300"
                              fill="rgb(250, 187, 92)" fill-opacity="0.3" stroke="rgba(59, 43, 20, 0.7)"/> <!-- прямоугольник на графике-->
 
 
-                    <path d="M 150 225 A 75 75, 90, 0, 0, 225 300 L 225 225 Z"
+                    <path id="sector" d="M 300 225 A 75 75, 90, 0, 0, 225 150 L 225 225 Z"
                           fill="rgb(250, 92, 111)" fill-opacity="0.3" stroke="rgba(59, 43, 20, 0.7)"/> <!-- сектор круга на графике-->
 
 
@@ -65,7 +72,6 @@
             </h:panelGroup>
 
 
-
             <h:panelGroup layout="block" id="answer">
 
             </h:panelGroup>
@@ -77,34 +83,145 @@
                     <h3>Выберите X:</h3>
 
                     <h:panelGroup styleClass="wrapperX">
-                        <ace:sliderEntry value="#{main.x}" styleClass="slider" stepPercent="${100/12}" length="200px" showLabels="false" min="-6" max="6">
+                        <ace:sliderEntry value="#{main.x}" styleClass="slider" id="inputX" stepPercent="${100/12}" length="200px" showLabels="false" min="-6" max="6">
                             <ace:ajax event="slideEnd" execute="@this" render="outX" />
                         </ace:sliderEntry>
                         <h:outputText id="outX" value="X: #{main.x/2}"/>
                     </h:panelGroup>
                     <h3>Выберите Y:</h3>
                     <h:panelGroup id="wrapperY">
-                        <h:inputText styleClass="inputY" id="inputY" value="#{main.y}" required="true">
-                            <f:validateDoubleRange minimum="-3" maximum="5"/>
-                            <ace:ajax execute="@this"/>
+                        <h:inputText value="#{main.y}" styleClass="inputY" id="inputY" required="true">
+                            <f:validator validatorId="textValidator"/>
                         </h:inputText>
                     </h:panelGroup>
                     <h3>Выберите R:</h3>
                     <h:panelGroup id="wrapperR">
-                        <ace:sliderEntry value="#{main.r}" styleClass="slider" stepPercent="${100/6}" length="200px" showLabels="false" min="2" max="8">
-                            <ace:ajax event="slideEnd" execute="@this" render="outR" />
+                        <ace:sliderEntry id="R" value="#{main.r}" styleClass="slider" stepPercent="${100/6}" length="200px" showLabels="false" min="2" max="8"  >
+                            <ace:ajax event="slide" render="outR" execute="R" />
+                            <ace:ajax execute="R" render="tab1" />
+                            <!--ace:ajax execute="r" ren<h:outputScript>
+                                changeRadius('#{main.r}')
+                            </h:outputScript-->
+
                         </ace:sliderEntry>
                         <h:outputText id="outR" value="R: #{main.r/2}"/>
                     </h:panelGroup>
 
                     <h:panelGroup layout="block" styleClass="sendClearWrapper">
-                        <h:commandButton class="commandButtons" value="Отправить" action="#{main.addPoint}"/>
+                        <h:commandButton id="refresh_table" class="commandButtons" value="Отправить" action="#{main.addPoint}">
+                            <!--h:outputScript>
+                                drawPoint('canvas', '#{150 + elem.x/elem.r*130}','#{150 - elem.y/elem.r*130}', '#{elem.isCheck}');
+                            </h:outputScript-->
+                        </h:commandButton>
                         <h:button class="commandButtons" value="Очистить"/>
                     </h:panelGroup>
 
                 </h:form>
+
+    <!-- ___________________________________second form_______________________________________________ -->
+
+                <h:form method="post" id="svgForm">
+
+                    <h:panelGroup style="display:none" id="wrapperXt">
+                        <h:inputText value="#{main.svgX}" styleClass="inputY" id="inputXHidden" required="true">
+                            <ace:ajax event="change" render="outXh" execute="inputXHidden" />
+                        </h:inputText>
+                        <h:outputText id="outXh" value="X: #{main.svgX}"/>
+                    </h:panelGroup>
+
+                    <h:panelGroup style="display:none" id="wrapperYt">
+                        <h:inputText value="#{main.svgY}" styleClass="inputY" id="inputYHidden" required="true">
+                            <!--f:validator validatorId="textValidator"/-->
+                            <ace:ajax event="change" render="outY" execute="inputYHidden" />
+                        </h:inputText>
+                        <h:outputText id="outY" value="Y: #{main.svgY}"/>
+                    </h:panelGroup>
+
+                    <h:panelGroup style="display:none" layout="block" styleClass="sendClearWrapper">
+                        <h:commandButton id="hidden_refresh_table" class="commandButtons" value="Отправить" action="#{main.addSVGPoint}">
+                        </h:commandButton>
+                        <h:button class="commandButtons" value="Очистить"/>
+                    </h:panelGroup>
+
+                </h:form>
+
+                <!-- ___________________________________second form_______________________________________________ -->
+
+
+                <!--h:form method="post" id="svgForm">
+
+                    <h:inputText value="#{main.x}" styleClass="inputY" id="inputXHidden" onchange="#{main.x}">
+                        <!-f:validator validatorId="textValidator"/-->
+                    <!--/h:inputText>
+
+                    <h:inputText value="#{main.y}" styleClass="inputY" id="inputYHidden" onchange="#{main.y}">
+                        <f:validator validatorId="textValidator"/-->
+                    <!--/h:inputText-->
+
+                    <!--h:inputText value="#{main.r}" styleClass="inputY" id="inputRHidden" onchange="#{main.r}">
+                        <!-f:validator validatorId="textValidator"/-->
+                    <!--/h:inputText>
+
+                    <h:commandButton style="display:none" id="hidden_refresh_table" action="#{main.addPoint}">
+                        <f:ajax execute="form" render="table"/>
+                    </h:commandButton>
+                </h:form-->
+
             </h:panelGroup>>
         </div>
+
+        <h:panelGroup id="tab1" styleClass="tableWrapper">
+            <h:outputScript>
+                <!--drawPoint('#{150 + elem.x/elem.r*130}','#{150 - elem.y/elem.r*130}', '#{elem.res}');-->
+                //changeRadius('#{main.r}');
+                <!--checkDrawnPoint('#{elem.r}');-->
+            </h:outputScript>
+            <ui:repeat value="#{main.points}" var="elem">
+                <h:outputScript>
+                    <!--drawPoint('#{150 + elem.x/elem.r*130}','#{150 - elem.y/elem.r*130}', '#{elem.res}');-->
+                    //showPointsByR('#{elem.r}');
+                    <!--checkDrawnPoint('#{elem.r}');-->
+                </h:outputScript>
+            </ui:repeat>
+        </h:panelGroup>
+
+        <h:panelGroup id="table" styleClass="tableWrapper">
+            <!--h:outputScript>
+                changeRadius('#{main.r}');
+            </h:outputScript-->
+            <ui:repeat value="#{main.points}" var="elem">
+                <h:outputScript>
+                    <!--drawPoint('#{150 + elem.x/elem.r*130}','#{150 - elem.y/elem.r*130}', '#{elem.res}');-->
+                    drawPoint('#{225 + 2*elem.x/elem.r*75}','#{225 - 2*elem.y/elem.r*75}', '#{elem.res}');
+                    <!--checkDrawnPoint('#{elem.r}');-->
+                </h:outputScript>
+            </ui:repeat>
+            <h:dataTable style="color: rgb(177, 227, 221); border-collapse: collapse; font-family: Comic Sans MS;"
+                         value="#{main.points}" var="point">
+                <h:column>
+                    <f:facet name="header" >X</f:facet>
+                    #{point.x}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Y</f:facet>
+                    #{point.y}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">R</f:facet>
+                    #{point.r}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Check result</f:facet>
+                    #{point.res}
+                </h:column>
+                <h:column>
+                    <f:facet name="header">Request time</f:facet>
+                    #{point.requestTime}
+                </h:column>
+            </h:dataTable>
+        </h:panelGroup>
+
     </h:body>
+    <h:outputScript library="js" name="main.js"/>
 </f:view>
 </html>
